# ai-ambulatorio

./: .gitignore  docker-compose.yml
backend/: Dockerfile  credentials.json  main.py  pyproject.toml
backend/services/: auth_service.py  excel_service.py  search_chatgpt.py  search_local.py  search_service.py
frontend/: package.json
frontend/src/: App.jsx
frontend/src/pages/: Login.jsx  Search.jsx
