[project]
name = "ai-ambulatorio-backend"
version = "0.1.0"
description = "Backend for AI Ambulatorio"
dependencies = [
    "fastapi",
    "uvicorn",
    "requests",
    "openai",
    "pandas",
    "openpyxl",
    "python-multipart",
    "ddgs",
    "beautifulsoup4",
    "gspread",
    "slowapi",
    "python-jose[cryptography]",
    "passlib[bcrypt]"
]
